--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@fontsource/inter": "^5.2.6",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.50.0",
+    "@visx/group": "^3.12.0",
+    "@visx/hierarchy": "^3.12.0",
+    "@visx/scale": "^3.12.0",
     "@visx/visx": "^3.12.0",
+    "d3-scale-chromatic": "^3.1.0",
+    "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.522.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
