--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "katex": "^0.16.22",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.522.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-katex": "^3.1.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.0.0"
   },
